[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/ui/theme.tres" type="Theme" id=1]
[ext_resource path="res://src/editor/delete_warning.gd" type="Script" id=2]

[node name="confirm" type="ConfirmationDialog"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -80.0
margin_right = 160.0
margin_bottom = 80.0
theme = ExtResource( 1 )
popup_exclusive = true
window_title = ""
script = ExtResource( 2 )

[node name="container" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 312.0
margin_bottom = 123.0

[node name="are_you_sure" type="Label" parent="container"]
margin_right = 304.0
margin_bottom = 21.0
text = "are you sure you want to delete"
align = 1
valign = 1

[node name="name" type="Label" parent="container"]
margin_top = 25.0
margin_right = 304.0
margin_bottom = 46.0
text = "name?"
align = 1
valign = 1
autowrap = true

[node name="irreversible" type="Label" parent="container"]
margin_top = 50.0
margin_right = 304.0
margin_bottom = 71.0
text = "this action is irreversible!"
align = 1
valign = 1

[connection signal="about_to_show" from="." to="." method="_on_confirm_about_to_show"]
[connection signal="confirmed" from="." to="." method="_on_confirm_confirmed"]
[connection signal="ready" from="." to="." method="_on_confirm_ready"]
